--- a/labkom.css
+++ b/labkom.css
@@ -1,29 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@200&display=swap');
-body {
-	margin:0;
-	padding: 0;
-	background: url(biru.jpg)no-repeat;
-	background-size: cover;
+.jumbotron{
+	padding-top: 8rem;
+	background-color: #ccebff;
 }
-.box{
-	width:750px;
-	background:rgba(0,0,0,0.4);
-	text-align: center;
-	text-shadow: 2px 2px black;
-	text-indent: 30px;
-	padding: 40px;
-	margin: auto;
-	margin-top: 3%;
-	color:white;
-	font-family: sans-serif;
-	font-size: 15px;
-	border:4px;
+
+#projects{
+	background-color: #ccebff;
 }
-.box-img{
-	border-radius: 50%;
-	width: 200px
-	height:200px;
+
+#footer{
+	background-color:#003d66;
 }
-.box-h1{
-	font-family: 'Bitter', serif;
+
+section{
+	padding-top: 4rem;
 }
