--- a/labkom.css
+++ b/labkom.css
@@ -3,13 +3,10 @@
 	background-color: #ccebff;
 }
 
-#projects{
+#pengalamanpjj{
 	background-color: #ccebff;
 }
 
-#footer{
-	background-color:#003d66;
-}
 
 section{
 	padding-top: 5rem;
